--- a/.obsidian/themes/Rosé Pine Moon/theme.css
+++ b/.obsidian/themes/Rosé Pine Moon/theme.css
@@ -11,7 +11,7 @@
 	  --font-size-h5: 19px;
 	  --font-size-h6: 18px;
 	  --font-family-editor: Plantin MT Pro, serif;
-	  --font-family-preview: Atkinson Hyperlegible, sans-serif;
+	  --font-family-preview: Metropolis, sans-serif;
 	}
 
 	.theme-light,
@@ -218,7 +218,7 @@
 	  -webkit-background-clip: text;
 	  -webkit-text-fill-color: transparent;
 	  padding: 0 0.1rem;
-	  color: ##eb6f92;
+	  color: #eb6f92;
 	  background-color: #eb6f92;
 	  background-image: linear-gradient(62deg, #eb6f92 0%, #c4a7e7 100%) !important;
 	}
@@ -300,7 +300,7 @@
 
 	.cm-header-1,
 	.markdown-preview-view h1 {
-	  font-family: var(--font-family-editor);
+	  font-family: var(--font-family-preview);
 	  font-weight: 500;
 	  font-size: var(--font-size-h1);
 	  color: var(--text-title-h1);
@@ -308,7 +308,7 @@
 
 	.cm-header-2,
 	.markdown-preview-view h2 {
-	  font-family: var(--font-family-editor);
+	  font-family: var(--font-family-preview);
 	  font-weight: 500;
 	  font-size: var(--font-size-h2);
 	  color: var(--text-title-h2);
@@ -316,7 +316,7 @@
 
 	.cm-header-3,
 	.markdown-preview-view h3 {
-	  font-family: var(--font-family-editor);
+	  font-family: var(--font-family-preview);
 	  font-weight: 500;
 	  font-size: var(--font-size-h3);
 	  color: var(--text-title-h3);
@@ -324,7 +324,7 @@
 
 	.cm-header-4,
 	.markdown-preview-view h4 {
-	  font-family: var(--font-family-editor);
+	  font-family: var(--font-family-preview);
 	  font-weight: 500;
 	  font-size: var(--font-size-h4);
 	  color: var(--text-title-h4);
@@ -332,7 +332,7 @@
 
 	.cm-header-5,
 	.markdown-preview-view h5 {
-	  font-family: var(--font-family-editor);
+	  font-family: var(--font-family-preview);
 	  font-weight: 500;
 	  font-size: var(--font-size-h5);
 	  color: var(--text-title-h5);
@@ -340,7 +340,7 @@
 
 	.cm-header-6,
 	.markdown-preview-view h6 {
-	  font-family: var(--font-family-editor);
+	  font-family: var(--font-family-preview);
 	  font-weight: 500;
 	  font-size: var(--font-size-h6);
 	  color: var(--text-title-h6);
@@ -769,7 +769,7 @@
 	code {
 	  color: var(--inline-code) !important;
 	  bottom: 0px !important;
-	  color:
+	  /* color: ; */
 	}
 
 	.theme-dark .graph-view.color-arrow {
